--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-body{ background-color: rgba(238, 238, 238, 0.55);} 
+body{ background-color: rgba(238, 238, 238, 0.55);}
 
 .md-18 { font-size: 18px !important; }
 .md-24 { font-size: 24px !important; }
@@ -37,3 +37,8 @@ body{ background-color: rgba(238, 238, 238, 0.55);}
 .dropdown-menu>li>a>i{ padding-right: 10px;}
 .dropdown-menu>li>a:hover { background-color: rgba(249, 249, 249, 0.78);}
 .pre-loader-bg{background:rgba(39, 39, 39, 0.5); position: fixed; z-index: 99999;  width: 100%; height: 100%; }
+
+legend {    border-bottom: 1px solid #e5e5e5;}
+.form-group{ padding-bottom: 0px; margin: 0px 0 0 0; }
+.alert.alert-info { background-color: #1e88e5; }
+.alert.alert-default { background-color: #757575; }
