--- a/src/app/areas/home/index/index.component.html
+++ b/src/app/areas/home/index/index.component.html
@@ -1,12 +1,30 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-6">
-        <div class="well infobox">
-            <app-scoreboard [jogos]="listaJogos" [controlsEvent]="[
+
+  <div class="col-xs-12 col-sm-6 col-md-6">
+    <div class="well infobox">
+      <fieldset>
+        <!--<legend>Jogos do dia</legend>-->
+        <h3>Jogos do dia</h3>
+
+        <app-scoreboard [jogos]="listaJogos" [controlsEvent]="[
                     { name: 'Palpite', icon: 'help_outline', action: eventDetails }
                     ]">
-            </app-scoreboard>
+        </app-scoreboard>
 
-            <app-home-details></app-home-details>
-        </div>
+        <app-home-details></app-home-details>
+      </fieldset>
     </div>
+  </div>
+
+  <div class="col-xs-12 col-sm-6 col-md-6">
+    <div class="well infobox">
+      <fieldset>
+        <!--<legend>Jogos do dia</legend>-->
+        <h3>Palpites</h3>
+
+
+      </fieldset>
+    </div>
+  </div>
+
 </div>
