--- a/src/app/areas/home/details/details.component.html
+++ b/src/app/areas/home/details/details.component.html
@@ -41,7 +41,8 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="pull-right">
-                <button class="btn btn-primary pull-right" [disabled]="!formJogoDetails.valid" (click)="adicionar(formJogoDetails.value)">Adicionar</button>
+                <!--<button class="btn btn-primary pull-right" [disabled]="!formJogoDetails.valid" (click)="adicionar(formJogoDetails.value)">Adicionar</button>-->
+                 <button class="btn btn-primary pull-right" (click)="adicionar(formJogoDetails.value)">Adicionar</button>
               </div>
             </div>
           </div>
@@ -78,7 +79,8 @@
             </fieldset>
           </div>
         </div>
-        <!--{{lstPalpites | json}} {{ formJogoDetails.value | json }}-->
+        <!--{{lstPalpites | json}}-->
+        {{ formJogoDetails.value | json }}
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="material-icons">clear</i>&nbsp;Fechar</button>
