--- a/src/app/areas/home/components/index/index.component.html
+++ b/src/app/areas/home/components/index/index.component.html
@@ -11,7 +11,7 @@
                     ]">
         </app-scoreboard>
 
-        <!--<app-home-details></app-home-details>-->
+        <app-home-tip></app-home-tip>
       </fieldset>
     </div>
   </div>
