--- a/src/app/areas/home/components/tip/tip.component.html
+++ b/src/app/areas/home/components/tip/tip.component.html
@@ -8,7 +8,7 @@
       <div class="modal-body">
 
         <form class="col-xs-12" novalidate [formGroup]="tipModel">
-
+{{lstMarket | json}}
           <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4">
               <div class="form-group">
