--- a/src/app/areas/home/components/index/index.component.html
+++ b/src/app/areas/home/components/index/index.component.html
@@ -3,9 +3,19 @@
   <div class="col-xs-12 col-sm-6 col-md-6">
     <div class="well infobox">
       <fieldset>
-        <!--<legend>Jogos do dia</legend>-->
-        <h3>Jogos do dia</h3>
 
+        <div class="row">
+          <div class="col-xs-12">
+            <h3 class="pull-left">Jogos do dia</h3>
+            <button type="button" class="btn btn-raised btn-primary pull-right">
+              <i class="material-icons">add</i>
+              <span class="hidden-xs">&nbsp;Novo Palpite</span>
+              </button>
+          </div>
+        </div>
+        <hr class="custom-hr" />
+
+        <!--Componente de jogos-->
         <app-scoreboard [games]="lstGames" [controlsEvent]="[
                     { name: 'Palpite', icon: 'help_outline', action: EVENT_MODAL_TIP }
                     ]">
