--- a/src/app/areas/home/components/tip/tip.component.html
+++ b/src/app/areas/home/components/tip/tip.component.html
@@ -79,8 +79,8 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="material-icons">clear</i>&nbsp;Fechar</button>
-        <button type="button" class="btn btn-primary" [disabled]="lstTips?.length <= 0"><i class="material-icons">done</i>&nbsp;Gravar</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal"><i class="material-icons md-18">clear</i>&nbsp;Fechar</button>
+        <button type="button" class="btn btn-primary" [disabled]="lstTips?.length <= 0"><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
       </div>
     </div>
   </div>
