--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,8 @@ body{ background-color: rgba(238, 238, 238, 0.55);}
 .pre-loader-bg{background:rgba(39, 39, 39, 0.5); position: fixed; z-index: 99999;  width: 100%; height: 100%; }
 
 legend {    border-bottom: 1px solid #e5e5e5;}
+/*legend > button { float: right !important; margin: -5px !important; padding: 8px 15px !important; }*/
 .form-group{ padding-bottom: 0px; margin: 0px 0 0 0; }
 .alert.alert-info { background-color: #1e88e5; }
 .alert.alert-default { background-color: #757575; }
+.custom-hr { margin-top: 0px;}
