--- a/src/app/areas/home/components/index/index.component.html
+++ b/src/app/areas/home/components/index/index.component.html
@@ -7,7 +7,8 @@
         <div class="row">
           <div class="col-xs-12">
             <h3 class="pull-left">Jogos do dia</h3>
-            <button type="button" class="btn btn-raised btn-primary pull-right">
+            <button type="button" class="btn btn-raised btn-primary pull-right"
+             (click)="newEvent()">
               <i class="material-icons">add</i>
               <span class="hidden-xs">&nbsp;Novo Palpite</span>
               </button>
@@ -21,19 +22,12 @@
                     ]">
         </app-scoreboard>
 
+        <!--Modal de Palpites-->
         <app-home-tip></app-home-tip>
+        <!--Modal de Eventos-->
+        <app-home-event></app-home-event>
+
       </fieldset>
     </div>
   </div>
-
-  <!--<div class="col-xs-12 col-sm-6 col-md-6">
-    <div class="well infobox">
-      <fieldset>
-        <h3>Palpites</h3>
-
-
-      </fieldset>
-    </div>
-  </div>-->
-
 </div>
