--- a/src/app/areas/home/components/index/index.component.html
+++ b/src/app/areas/home/components/index/index.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-
+  <!--Jogos-->
   <div class="col-xs-12 col-sm-6 col-md-6">
     <div class="well infobox">
       <fieldset>
@@ -7,11 +7,6 @@
         <div class="row">
           <div class="col-xs-12">
             <h3 class="pull-left">Jogos do dia</h3>
-            <button type="button" class="btn btn-raised btn-primary pull-right"
-             (click)="newEvent()">
-              <i class="material-icons">add</i>
-              <span class="hidden-xs">&nbsp;Novo Palpite</span>
-              </button>
           </div>
         </div>
         <hr class="custom-hr" />
@@ -27,6 +22,45 @@
         <!--Modal de Eventos-->
         <app-home-event></app-home-event>
 
+      </fieldset>
+    </div>
+  </div>
+
+  <!--Palpites Realizados-->
+  <div class="col-xs-12 col-sm-6 col-md-6">
+    <div class="well infobox">
+      <fieldset>
+
+        <div class="row">
+          <div class="col-xs-12">
+            <h3 class="pull-left">Palpites do dia</h3>
+            <button type="button" class="btn btn-raised btn-primary pull-right" (click)="newEvent()">
+              <i class="material-icons">add</i>
+              <span class="hidden-xs">&nbsp;Novo Palpite</span>
+            </button>
+          </div>
+        </div>
+        <hr class="custom-hr" />
+
+        <div *ngFor="let item of lstTipsOfDays">
+          <div class="event">
+            <span>{{ item.TeamPrincipal }}</span>
+            <span>X</span>
+            <span>{{ item.TeamVisitor }}</span>
+          </div>
+          <table class="table table-striped table-hover ">
+            <tbody>
+              <tr *ngFor="let tip of item.Tips">
+                <td> {{ tip.Market }}</td>
+                <td> {{ tip.Odds }}</td>
+                <td> {{ tip.Value }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <span>Nenhum palpite realizado hoje.</span>
+        <!--{{ lstTipsOfDays | json }}-->
       </fieldset>
     </div>
   </div>
