--- a/src/app/areas/home/components/event/event.component.html
+++ b/src/app/areas/home/components/event/event.component.html
@@ -66,7 +66,17 @@
                 <display-validation [control]="tipModel.controls.Value"></display-validation>
               </div>
             </div>
+
+            <div class="col-xs-12 col-sm-4 col-md-4">
+              <div class="togglebutton">
+                <label>
+                      <input type="checkbox" [checked]="tipModel.controls.InLive" formControlName="InLive">
+                      <span class="toggle"></span> Toggle button
+                </label>
+              </div>
+            </div>
           </div>
+           {{ tipModel.value | json  }}
 
           <div class="row">
             <div class="col-xs-12">
