--- a/src/app/areas/home/components/event/event.component.html
+++ b/src/app/areas/home/components/event/event.component.html
@@ -70,7 +70,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
               <div class="togglebutton">
                 <label>
-                      <input type="checkbox" [checked]="tipModel.controls.InLive" formControlName="InLive">
+                      <input type="checkbox" formControlName="InLive">
                       <span class="toggle"></span> Toggle button
                 </label>
               </div>
@@ -122,7 +122,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="material-icons md-18">clear</i>&nbsp;Fechar</button>
-        <button type="button" class="btn btn-primary" [disabled]="lstTips?.length <= 0"><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
+        <button type="button" class="btn btn-primary" [disabled]="lstTips.length <= 0 || !eventModel.valid"><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
       </div>
     </div>
   </div>
