--- a/src/app/areas/home/components/event/event.component.html
+++ b/src/app/areas/home/components/event/event.component.html
@@ -76,7 +76,7 @@
               </div>
             </div>
           </div>
-           {{ tipModel.value | json  }}
+          {{ tipModel.value | json }}
 
           <div class="row">
             <div class="col-xs-12">
@@ -93,7 +93,7 @@
             <fieldset>
               <legend>Lista de palpites</legend>
 
-              <table class="table table-striped table-hover" *ngIf="lstTips?.length > 0">
+              <table class="table table-striped table-hover" *ngIf="eventModel.controls.LstTips.value.length > 0">
                 <thead>
                   <tr>
                     <th>Mercado</th>
@@ -101,7 +101,7 @@
                     <th>Valor</th>
                   </tr>
                 </thead>
-                <tbody *ngFor="let item of lstTips">
+                <tbody *ngFor="let item of eventModel.controls.LstTips.value">
                   <tr>
                     <td> {{ item.Market }}</td>
                     <td> {{ item.Odds }}</td>
@@ -110,7 +110,7 @@
                 </tbody>
               </table>
 
-              <div *ngIf="lstTips?.length <= 0">
+              <div *ngIf="eventModel.controls.LstTips.value.length <= 0">
                 <div class="alert alert-dismissible alert-default">
                   <span><strong>Não</strong> existe nenhum palpite para este jogo.</span>
                 </div>
@@ -122,7 +122,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="material-icons md-18">clear</i>&nbsp;Fechar</button>
-        <button type="button" class="btn btn-primary" [disabled]="lstTips?.length <= 0"><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
+        <button type="button" class="btn btn-primary" [disabled]="eventModel.controls.LstTips.value.length <= 0"><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
       </div>
     </div>
   </div>
