--- a/src/app/areas/home/components/event/event.component.html
+++ b/src/app/areas/home/components/event/event.component.html
@@ -70,7 +70,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
               <div class="togglebutton">
                 <label>
-                      <input type="checkbox" [checked]="tipModel.controls.InLive" formControlName="InLive">
+                      <input type="checkbox" formControlName="InLive">
                       <span class="toggle"></span> Toggle button
                 </label>
               </div>
