--- a/src/app/areas/home/components/event/event.component.html
+++ b/src/app/areas/home/components/event/event.component.html
@@ -122,7 +122,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="material-icons md-18">clear</i>&nbsp;Fechar</button>
-        <button type="button" class="btn btn-primary" [disabled]="eventModel.controls.LstTips.value.length <= 0"><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
+        <button type="button" class="btn btn-primary" [disabled]="isValidCustom() "><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
       </div>
     </div>
   </div>
