--- a/src/app/areas/home/components/event/event.component.html
+++ b/src/app/areas/home/components/event/event.component.html
@@ -70,13 +70,13 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
               <div class="togglebutton">
                 <label>
-                      <input type="checkbox" formControlName="InLive">
-                      <span class="toggle"></span> Toggle button
+                    <input type="checkbox" formControlName="InLive">
+                    <span class="toggle"></span>
+                     {{ tipModel.controls.InLive.value === true ? "In Live" : "Pré Live" }}
                 </label>
               </div>
             </div>
           </div>
-          {{ tipModel.value | json }}
 
           <div class="row">
             <div class="col-xs-12">
@@ -96,16 +96,20 @@
               <table class="table table-striped table-hover" *ngIf="eventModel.controls.LstTips.value.length > 0">
                 <thead>
                   <tr>
+                    <th>Evento</th>
                     <th>Mercado</th>
                     <th>Odds</th>
                     <th>Valor</th>
+                    <th></th>
                   </tr>
                 </thead>
-                <tbody *ngFor="let item of eventModel.controls.LstTips.value">
+                <tbody *ngFor="let item of eventModel.controls.LstTips.value; let i = index">
                   <tr>
+                    <td> {{ item.InLive === true ? "In Live" : "Pré Live" }}</td>
                     <td> {{ item.Market }}</td>
                     <td> {{ item.Odds }}</td>
                     <td> {{ item.Value }}</td>
+                    <td><a href="javascript:void(0)" (click)="removeTip(i)">Remover</a></td>
                   </tr>
                 </tbody>
               </table>
@@ -122,11 +126,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="material-icons md-18">clear</i>&nbsp;Fechar</button>
-<<<<<<< HEAD
-        <button type="button" class="btn btn-primary" [disabled]="lstTips.length <= 0 || !eventModel.valid"><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
-=======
-        <button type="button" class="btn btn-primary" [disabled]="isValidCustom() "><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
->>>>>>> 0c2103b9a049850d01623d00cecd79298265f229
+        <button type="button" class="btn btn-primary" [disabled]="isValidCustom()"><i class="material-icons md-18">done</i>&nbsp;Gravar</button>
       </div>
     </div>
   </div>
