--- a/src/app/areas/home/components/index/index.component.html
+++ b/src/app/areas/home/components/index/index.component.html
@@ -44,6 +44,7 @@
 
         <div *ngFor="let item of lstTipsOfDays">
           <div class="event">
+            <span>{{ item.StatusID }}</span>
             <span>{{ item.TeamPrincipal }}</span>
             <span>X</span>
             <span>{{ item.TeamVisitor }}</span>
@@ -51,9 +52,10 @@
           <table class="table table-striped table-hover ">
             <tbody>
               <tr *ngFor="let tip of item.Tips">
-                <td> {{ tip.Market }}</td>
-                <td> {{ tip.Odds }}</td>
-                <td> {{ tip.Value }}</td>
+                <td> {{ tip.StatusID }} </td>
+                <td> {{ tip.Market }} </td>
+                <td> {{ tip.Odds }} </td>
+                <td> {{ tip.Value }} </td>
               </tr>
             </tbody>
           </table>
