--- a/src/app/areas/home/components/event/event.component.html
+++ b/src/app/areas/home/components/event/event.component.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h4 class="modal-title">Evento<small> - Cadastro</small></h4>
+        <h3 class="modal-title">Evento<small> - Cadastro</small></h3>
       </div>
       <div class="modal-body">
 
@@ -55,6 +55,7 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
               <div class="form-group">
                 <label for="txtOdds" class="control-label">Odds</label>
+                 <!--[mask]="'cep'"-->
                 <input id="txtOdds" type="text" class="form-control" formControlName="Odds" />
                 <display-validation [control]="tipModel.controls.Odds"></display-validation>
               </div>
