--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body{ background-color: rgba(238, 238, 238, 0.55);}
+h3 > small { font-size: 55%; }
 
 .md-18 { font-size: 18px !important; }
 .md-24 { font-size: 24px !important; }
