--- a/src/app/areas/home/components/index/index.component.html
+++ b/src/app/areas/home/components/index/index.component.html
@@ -10,7 +10,8 @@
           </div>
         </div>
         <hr class="custom-hr" />
-
+        <input type='text' mask='9999-99-99' specialCharacters="false" [(ngModel)]="teste">
+        {{teste }}
         <!--Componente de jogos-->
         <app-scoreboard [games]="lstGames" [controlsEvent]="[
                     { name: 'Palpite', icon: 'help_outline', action: EVENT_MODAL_TIP }
