--- a/src/app/areas/home/components/index/index.component.html
+++ b/src/app/areas/home/components/index/index.component.html
@@ -17,8 +17,6 @@
                     ]">
         </app-scoreboard>
 
-        <!--Modal de Palpites-->
-        <app-home-tip></app-home-tip>
         <!--Modal de Eventos-->
         <app-home-event></app-home-event>
 
@@ -42,29 +40,9 @@
         </div>
         <hr class="custom-hr" />
 
-        <div *ngFor="let item of lstTipsOfDays">
-          <div class="event">
-            <span>{{ item.StatusID }}</span>
-            <span>{{ item.TeamPrincipal }}</span>
-            <span>X</span>
-            <span>{{ item.TeamVisitor }}</span>
-          </div>
-          <table class="table table-striped table-hover ">
-            <tbody>
-              <tr *ngFor="let tip of item.Tips">
-                <td> {{ tip.StatusID }} </td>
-                <td> {{ tip.Market }} </td>
-                <td> {{ tip.Odds }} </td>
-                <td> {{ tip.Value }} </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div *ngIf="lstTipsOfDays.length <= 0">
-           <span>Nenhum palpite realizado hoje.</span>
-        </div>
-       
-        <!--{{ lstTipsOfDays | json }}-->
+        <!--Componente de palpites-->
+        <app-tip [tips]="lstTipsOfDays"></app-tip>
+
       </fieldset>
     </div>
   </div>
