--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -10,7 +10,14 @@
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="javascript:void(0)" routerLink="/">Página inicial</a></li>
+        <li routerLinkActive="active">
+          <a href="javascript:void(0)" routerLink="/home">Página inicial</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active">
+          <a href="javascript:void(0)" routerLink="/monitoring">Acompanhamento</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
