--- a/src/app/areas/home/components/monitoring/monitoring.component.html
+++ b/src/app/areas/home/components/monitoring/monitoring.component.html
@@ -7,6 +7,8 @@
       <fieldset>
         <legend>Filtro</legend>
 
+        Falta definir filtro
+
         <!--<form class="col-xs-12" novalidate [formGroup]="tipFilterModel">
         <div class="row">
           <div class="col-xs-12 col-sm-4 col-md-4">
@@ -19,8 +21,13 @@
       </form>-->
       </fieldset>
 
-      <!--Componente de palpites-->
-      <app-tip [tips]="lstTips"></app-tip>
+      <fieldset>
+        <legend>Lista de palpites</legend>
+
+        <!--Componente de palpites-->
+        <app-tip [tips]="lstTips"></app-tip>
+      </fieldset>
+
     </div>
   </div>
 </div>
