--- a/src/app/areas/home/components/monitoring/monitoring.component.html
+++ b/src/app/areas/home/components/monitoring/monitoring.component.html
@@ -25,7 +25,7 @@
         <legend>Lista de palpites</legend>
 
         <!--Componente de palpites-->
-        <app-tip [tips]="lstTips"></app-tip>
+        <app-tip [tips]="lstTips" [showControls]="true"></app-tip>
       </fieldset>
 
     </div>
