--- a/src/app/areas/home/components/index/index.component.html
+++ b/src/app/areas/home/components/index/index.component.html
@@ -18,7 +18,7 @@
         </app-scoreboard>
 
         <!--Modal de Eventos-->
-        <app-home-event></app-home-event>
+        <app-home-event [modalID]="modalCreateEvent"></app-home-event>
 
       </fieldset>
     </div>
