--- a/src/app/areas/home/components/event/event.component.html
+++ b/src/app/areas/home/components/event/event.component.html
@@ -1,4 +1,4 @@
-<div class="modal" id="modalEvent" tabindex="-1" data-keyboard="false" role="dialog" data-toggle="modal" data-backdrop="static">
+<div class="modal" [attr.id]="modalID" tabindex="-1" data-keyboard="false" role="dialog" data-toggle="modal" data-backdrop="static">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -13,21 +13,13 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6">
               <div class="form-group">
-                <!--<label for="ddlMarket" class="control-label">Time mandante</label>-->
 
-                <ng-select [allowClear]="true"
-              [items]="lstTeamPrincipal"
-             
-              
-              placeholder="No city selected">
-  </ng-select>
-
-{{value.text}}
-                <!--<select id="ddlMarket" class="form-control" type="number" formControlName="TeamPrincipalID">
+                <label for="ddlMarket" class="control-label">Time mandante</label>
+                <select id="ddlMarket" class="form-control" type="number" formControlName="TeamPrincipalID">
                     <option *ngFor="let item of lstTeamPrincipal" [ngValue]="item.TeamID">
                         {{item.Name}}
                     </option>
-                </select>-->
+                </select>
                 <display-validation [control]="eventModel.controls.TeamPrincipalID"></display-validation>
               </div>
             </div>
@@ -71,7 +63,8 @@
             <div class="col-xs-12 col-sm-4 col-md-4">
               <div class="form-group">
                 <label for="txtValue" class="control-label">Valor</label>
-                <input type="text" currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" class="form-control" id="txtValue" formControlName="Value" />
+                <input type="text" currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" class="form-control" id="txtValue"
+                  formControlName="Value" />
                 <display-validation [control]="tipModel.controls.Value"></display-validation>
               </div>
             </div>
@@ -96,8 +89,6 @@
           </div>
 
         </form>
-
-        {{ tipModel.value | json }}
 
         <div class="row">
           <div class="col-xs-12">
